- Added `Either` methods:     - `mapA`     - `mapB`     - `flatMapA`     - `flatMapB` - Added proper generic parameter variance to a bunch of `Either`'s methods - Renamed `Either.of()` to `Either.ofNullable()` so that it doesn't get auto-completed over the more common `ofA()` and `ofB()`